--- a/index.html
+++ b/index.html
@@ -1,103 +1,110 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PassVault - Modern Password Manager</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pass Manager - Personal Password Manager </title>
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
- * {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
-}
-
-.poppins-light {
-  font-weight: 300;
-  font-style: normal;
-}
-
-nav {
-  background-color: red;
-  padding: 15px;
-}
-ul {
-  display: flex;
-  justify-content: center;
-}
-ul li {
-  list-style: none;
-  margin: 0 20px;
-  cursor: pointer;
-  font-weight: 500;
-  color: white;
-  transition: color 0.3s ease;
-}
-ul li:hover {
-  color: rgb(9, 99, 203);
-}
-.container {
-  max-width: 800px;
-  margin: 50px auto;
-  padding: 20px;
-  text-align: center;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-}
-</style>
-</head>
-
-
-
-<body>
-    <nav> 
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+  <body>
+    <nav>
+      <div class="nav-container">
+        <div class="logo">PassVault</div>
+        <ul class="nav-links">
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
         </ul>
+      </div>
     </nav>
-    <div class = "container">
-        <h1>Pass Manager</h1>
-        <p>Your Personal Password Manager</p>
-        <h3 style="margin-top: 20px; color: #333;">👋 Hello and Welcome!</h2>
-        <p style="font-size: 1.1rem; max-width: 600px; line-height: 1.5;">
-        We’re glad you’re here! Pass Manager is designed to help you safely store, manage, 
-        and organize your passwords with ease. Explore the features below and start securing your digital life today.
+
+    <div class="container">
+      <div class="hero">
+        <h1>PassVault</h1>
+        <p class="subtitle">Your Modern Password Manager</p>
+      </div>
+
+      <div class="welcome-card">
+        <h3>🔐 Welcome to PassVault!</h3>
+        <p>
+          We're glad you're here! PassVault is designed to help you safely
+          store, manage, and organize your passwords with ease. Explore the
+          features below and start securing your digital life today.
         </p>
-        <h3> Your Passwords</h3>
-         <h3> Add a Password</h3>
-         <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>City</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Goutam</td>
-        <td>30</td>
-        <td>Mirzapur</td>
-      </tr>
-      <tr>
-        <td>Oggy</td>
-        <td>24</td>
-        <td>Ghaziapur</td>
-      </tr>
-      <tr>
-        <td>Nick</td>
-        <td>35</td>
-        <td>dholakpur</td>
-      </tr>
-    </tbody>
-  </table>
+      </div>
+
+      <div class="card">
+        <h3>🔑 Your Passwords</h3>
+        <div class="table-container">
+          <table>
+            <thead>
+              <tr>
+                <th>Website</th>
+                <th>Username</th>
+                <th>Password</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>github.com</td>
+                <td>goutam@example.com</td>
+                <td>••••••••••</td>
+                <td><button class="delete-btn">Delete</button></td>
+              </tr>
+              <tr>
+                <td>google.com</td>
+                <td>oggy.dev@gmail.com</td>
+                <td>••••••••••</td>
+                <td><button class="delete-btn">Delete</button></td>
+              </tr>
+              <tr>
+                <td>linkedin.com</td>
+                <td>nick.professional</td>
+                <td>••••••••••</td>
+                <td><button class="delete-btn">Delete</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>➕ Add New Password</h3>
+        <form class="form-grid">
+          <div class="form-group">
+            <label for="website">Website URL</label>
+            <input
+              type="url"
+              id="website"
+              name="website"
+              placeholder="https://example.com"
+            />
+          </div>
+          <div class="form-group">
+            <label for="username">Username/Email</label>
+            <input
+              type="text"
+              id="username"
+              name="username"
+              placeholder="your@email.com"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              placeholder="Enter your password"
+            />
+          </div>
+          <button type="submit" class="submit-btn">Add Password</button>
+        </form>
+      </div>
     </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
